[package]
name = "tsunami"
version = "0.11.0-beta.3"
authors = ["Jon Gjengset <jon@thesquareplanet.com>", "Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Toolkit for running short-lived jobs on cloud VMs"
repository = "https://github.com/jonhoo/tsunami.git"

keywords = ["ec2", "aws", "azure", "vm", "spot-instances", "distributed", "benchmark"]
categories = ["api-bindings", "development-tools"]


[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "tsunami", build = "25" }
maintenance = { status = "passively-maintained" }

[features]
default = ["aws", "azure", "baremetal"]
aws = ["rusoto_core", "rusoto_ec2", "futures-util", "tempfile", "ubuntu-ami"]
azure = ["serde", "serde_json", "futures-util", "tokio", "tokio/process"]
baremetal = []
args = ["structopt"]

[dependencies]
color-eyre = "0.3"
educe = "0.4"
eyre = "0.4"
itertools = "0.8"
openssh = "0.6"
rand = "0.7"
tracing = "0.1"
tracing-futures = "0.2"
rusoto_core = { version = "0.43.0", optional = true }
rusoto_ec2 = {version = "0.43.0", optional = true }
futures-util = { version = "0.3.4", optional = true }
tempfile = { version = "3.0.0", optional = true }
tokio = { version = "0.2.0", features = [ "time" ], optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true}
structopt = { version = "0.2", optional = true }
ubuntu-ami = { version = "0.1", optional = true }

[dev-dependencies]
rusoto_sts = "0.43.0"
tokio = { version = "0.2.0", features = ["rt-core", "macros"] }

[[example]]
name = "launch"
required-features = ["args"]

[[example]]
name = "ping"
required-features = ["args"]
